lab1/Test/L1-A-10-24.output
Error Type A at Line 6
Error Type B at Line 15
