lab1/Test/L1-A-10-24.cmm
float pERtKmfn ( ) {
  s5VKibV || fYWfS && dTE4QqpJeZXuTbf == ! - ( cA0Aa 
    = qDwAjreBRYrIropp < sE - Iqpt * ! ! - - XZgNxx9Xj 
    ( lBpsWDq = rXxDs3JDYqcykuZGC4 = hnB2TpTKpe0g386Hu4U 
    <= uhyZWgQe6aaRcEc4a + JELOUJz / ! ! lrDkGhqQp5RLKoP7Y0 
    [ jfyMo7gx @/ ! ( yH5H9RasT8oTIYEBXd9d != SCLgV / 
    reH [ Ft1k3uacwz9Z2sSM / ( j3E6UWC == BUr * Wf5hckyValScKwuqgQ 
    ( j9QRDUMW , f ) / - - ! MZYR + Rqo6eUu0VZhnZH1hk 
    + y0FVVEXa0R ) . Avl0iIIKNYNlMh == q_gIDorGhXz5uo 
    ] >= - ! - nPm_NDb5MWbACX9stdw3 * PmHq ) . aErqvYXSzlXwfJVnBn 
    + - - - FcgBR10bFQe > - 1502100441.2012577557 . PQff 
    * - 1789052843 ] . p38dIjo84 ) ) / KS1hcWrNaGvMCwFK 
    ( ) ;
}
[ struct BfOMBWL_JlR3u P3pBf7lC5mXe [ 1298787410 ] 
;
int ;
int ;
int LM ( int S9WDB8_ ) {
  xBXXd_Yl ;
  if ( Dj )   if ( dqDwH )   while ( g9iRCww )   hmjJA_hqkeNj_W 
    ;

else {
  }
else   if ( TVkkoZkNR9cElCMFOp1f )   return z ;


}
struct crM8HXqpEkw0Tosm4 {
  struct R7Eo6NSerSnjL VFfpR7fwkBWviRag5 ;
  struct {
    int zn7xYxJ9LU1PqeEacA ;
  }gP5CsL = JmJogO , CQo ;
};
int ;
int L3 , P5yg_JP1JjV3z 

;
int ;
int mjEevIuvL4 ( ) {
}
int bdiD0xZnxcGk ( int Ae4lj36a , int P15vk ) {
}
int ;
